--- a/LaGranjaSA/src/main/resources/application.properties
+++ b/LaGranjaSA/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=LaGranjaSA
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=LaGranjaSA;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
