--- a/LaGranjaSA/src/main/resources/application.properties
+++ b/LaGranjaSA/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+spring.graphql.graphiql.enabled=true
